<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartscreenActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="413dp"
        android:layout_height="733dp"
        android:layout_marginBottom="8dp"
        android:background="#89DCE8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="366dp"
        android:layout_height="361dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_rouded_corners_10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564">

    </FrameLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_button2"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="sp"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        tools:text="@string/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:background="@drawable/shape_button3"
        android:text="@string/button3"
        android:textColor="#FFFFFF"
        android:textSize="sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout" />

    <Button
        android:id="@+id/button4"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_button4"
        android:text="@string/button4"
        android:textColor="#FFFFFF"
        android:textSize="sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.294" />

    <Button
        android:id="@+id/button5"
        android:layout_width="140dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_button5"
        android:text="@string/button5"
        android:textColor="#FFFFFF"
        android:textSize="sp"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <Button
        android:id="@+id/skipbutton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#535353"
        android:text="@string/skipbutton"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <Button
        android:id="@+id/button7"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_button7"
        android:text="@string/button7"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toTopOf="@+id/frameLayout2"
        app:layout_constraintVertical_bias="0.756" />


</androidx.constraintlayout.widget.ConstraintLayout>