<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ColorfilterActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="413dp"
        android:layout_height="733dp"
        android:layout_marginBottom="8dp"
        android:background="#89DCE8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">

    </FrameLayout>

<FrameLayout
    android:id="@+id/frameLayout"
    android:layout_width="366dp"
    android:layout_height="361dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/shape_rouded_corners_10dp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.482"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.564">

</FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="134dp"
        android:layout_height="56dp"
        android:text="@string/buttonP"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#535353"
        android:text="@string/backbutton"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toStartOf="@+id/finishbutton"
        app:layout_constraintStart_toStartOf="@+id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


    <Button
        android:id="@+id/finishbutton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:background="#535353"
        android:text="@string/finishbutton"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />
<Button
    android:id="@+id/button7"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/shape_button7"
    android:text="@string/button8"
    android:textColor="#FFFFFF"
    android:textSize="18sp"
    app:layout_constraintBottom_toTopOf="@+id/frameLayout"
    app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
    app:layout_constraintHorizontal_bias="0.4"
    app:layout_constraintStart_toStartOf="@+id/frameLayout2"
    app:layout_constraintTop_toTopOf="@+id/frameLayout2"
    app:layout_constraintVertical_bias="0.756" />

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="104dp"
        android:text="Button"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <Button
        android:id="@+id/button6"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <Button
        android:id="@+id/button8"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="104dp"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />

    <Button
        android:id="@+id/button9"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/frameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>